--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 *.pyd
 *.dll
-build
-attributee
-test_*.py
-ImageDirectory
-~*
 *.so
-build
-__pycache__
 *.pyc
-tmp
 .*
+~*
+pp_*.py
+test_*.py
+build
 dist
+datasets
+img
+__pycache__
