--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,2 @@
 [build-system]
-requires = ["setuptools", "wheel", "setuptools_dso", "pybind11>=2.5.0", "numpy>=1.20", "pip"]
+requires = ["setuptools", "wheel", "pybind11>=2.9.0", "numpy>=1.19", "pip"]
