Separate dependencies in cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,32 +40,11 @@ IF (CMAKE_CXX_BYTE_ORDER EQUAL BIG_ENDIAN)
     add_definitions(-DPIXELPIPES_BIGENDIAN)
 ENDIF()
 
+INCLUDE(cmake/lodepng.cmake)
+INCLUDE(cmake/zlib.cmake)
+INCLUDE(cmake/opencv.cmake)
 
-FetchContent_Declare(lodepng
-  GIT_REPOSITORY https://github.com/lvandeve/lodepng.git
-  GIT_TAG        5601b8272a6850b7c5d693dd0c0e16da50be8d8d
-)
-
-FetchContent_MakeAvailable(lodepng)
-
-ADD_LIBRARY(lodepng STATIC ${lodepng_SOURCE_DIR}/lodepng.cpp)
-
-
-ExternalProject_Add(zlib
-  PREFIX zlib
-  GIT_REPOSITORY    https://github.com/zlib-ng/zlib-ng
-  GIT_TAG           c882034d48afc0b32a38e8f7ca63a2e4e91ab42d
-  CMAKE_ARGS        -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/deps -DCMAKE_C_FLAGS=-fPIC
-  INSTALL_DIR       "${CMAKE_BINARY_DIR}/deps"
-  TEST_COMMAND      ""
-)
-
-add_library(zlib_lib STATIC IMPORTED)
-set_target_properties(zlib_lib PROPERTIES IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/deps/${CMAKE_INSTALL_LIBDIR}/libz-ng.a)
-
-add_dependencies(zlib_lib zlib)
-
-FIND_PACKAGE(OpenCV REQUIRED core imgproc imgcodecs video calib3d)
+#FIND_PACKAGE(OpenCV REQUIRED core imgproc imgcodecs video calib3d)
 
 SET(CORE_SOURCE
     src/queue.cpp
@@ -81,9 +60,10 @@ SET(CORE_SOURCE
     src/image.cpp
     src/numbers.cpp
     src/list.cpp
+    src/io.cpp
 )
 
-INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} ${lodepng_SOURCE_DIR}
+INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIRS} ${lodepng_SOURCE_DIR}
     ${xsimd_SOURCE_DIR}/include ${lodepng_SOURCE_DIR}/include
     ${CMAKE_BINARY_DIR}/deps/include include/ )
     
@@ -99,7 +79,7 @@ ADD_LIBRARY(pixelpipes_geometry SHARED
     src/geometry/view.cpp
     )
 
-TARGET_LINK_LIBRARIES(pixelpipes_geometry pixelpipes ${OpenCV_LIBS})
+TARGET_LINK_LIBRARIES(pixelpipes_geometry pixelpipes ${OPENCV_LIBS})
 
 ADD_LIBRARY(pixelpipes_image SHARED 
     src/image/common.cpp
@@ -110,8 +90,10 @@ ADD_LIBRARY(pixelpipes_image SHARED
     src/image/render.cpp
     )
 
-TARGET_LINK_LIBRARIES(pixelpipes_image pixelpipes ${OpenCV_LIBS})
+MESSAGE(${OPENCV_LIBS}) 
 
+TARGET_LINK_LIBRARIES(pixelpipes_image pixelpipes ${OPENCV_LIBS})
+ 
 
 # CMake config file
 INCLUDE(CMakePackageConfigHelpers)
