CLI tool start, torch bypass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ SET(CMAKE_C_VISIBILITY_PRESET hidden)
 option(BUILD_INPLACE "Build to source directory" OFF)
 option(BUILD_PYTHON "Build the Python wrapper" ON)
 option(BUILD_DEBUG "Enable debug output" OFF)
-option(BUILD_TEST "Enable test snippets" OFF)
+option(BUILD_TOOL "Build CLI tool" ON)
 
 SET(CMAKE_EXTERNALS_DIR "${CMAKE_BINARY_DIR}/external/")
 
@@ -139,7 +139,8 @@ IF (BUILD_INPLACE)
     )
 ENDIF()
 
-IF (BUILD_TEST)
-    ADD_EXECUTABLE(test_compression src/serialization/test.cpp)
-    TARGET_LINK_LIBRARIES(test_compression pixelpipes)
+IF (BUILD_TOOL)
+    ADD_EXECUTABLE(pixelpipes_cli src/tool/main.cpp)
+    set_target_properties(pixelpipes_cli PROPERTIES OUTPUT_NAME "pixelpipes")
+    TARGET_LINK_LIBRARIES(pixelpipes_cli pixelpipes)
 ENDIF()
