Fixing first demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 CMAKE_POLICY(SET CMP0091 NEW)
+cmake_policy(SET CMP0114 NEW)
 
 PROJECT(pixelpipes)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.11 FATAL_ERROR)
@@ -139,6 +140,14 @@ IF (BUILD_INPLACE)
         LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/pixelpipes"
         LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/pixelpipes"
         RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/pixelpipes"
+    )
+ELSE()
+    set_target_properties(${BINARY_TARGETS}
+        PROPERTIES
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+        LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}"
+        LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}"
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
     )
 ENDIF()
 
